# byten

./: Cargo.toml  README.md
binary_codec/: Cargo.toml
binary_codec/src/: array.rs  lib.rs  primitive.rs
binary_codec_derive/: Cargo.toml
binary_codec_derive/src/: lib.rs
binary_codec_derive/src/schema/: codec.rs  enum.rs  field.rs  mod.rs  struct.rs  type.rs
binary_codec_derive/tests/: integration_test.rs
byten/: Cargo.toml
byten/examples/: archive.rs  asymmetric.rs  borrowed.rs  icmp.rs
byten/src/: fix.rs  lib.rs  prelude.rs  prim.rs  util.rs  var.rs
byten/src/var/: str.rs
byten_derive/: Cargo.toml
byten_derive/src/: lib.rs
byten_derive/src/schema/: codec.rs  enum.rs  field.rs  mod.rs  struct.rs
byten_derive/tests/: integration_test.rs
