[package]
name = "byten"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A binary codec library for efficient encoding and decoding of data structures"
documentation = "https://docs.rs/byten"
readme = "../README.md"

[features]
default = ["derive", "anyhow"]
derive = ["dep:byten_derive"]
anyhow = ["dep:anyhow"]

[dependencies]
byten_derive = { workspace = true, optional = true }
heapless = "0.9.1"
anyhow = { version = "1", optional = true }
thiserror = { version = "2" }
