[package]
name = "byten_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for deriving binary codec traits (internal use by byten)"
documentation = "https://docs.rs/byten_derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = "2.0.108"

[dev-dependencies]
byten = { workspace = true, default-features = false }
